Undoing attempted fixes that didn't fix anything

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -21,7 +21,7 @@
         "INSERT YOUR AWS PROFILE HERE"
       ],
       "console": "integratedTerminal",
-      "outFiles": ["${workspaceFolder}/.sst/artifacts"],
+      // "outFiles": ["${workspaceFolder}/.sst/artifacts"],
       "skipFiles": ["<node_internals>/**"]
     }
   ]
